syntax = "proto3";

package admission;
option go_package = "./proto";

service AdmissionService {
    rpc ApplyAdmission (ApplyAdmissionRequest) returns (AdmissionResponse);
    rpc GetAdmission (GetAdmissionRequest) returns (AdmissionResponse);
    rpc ListAdmissions (ListAdmissionsRequest) returns (ListAdmissionsResponse);
}

message Admission {
    int32 id = 1;
    string student_name = 2;
    string course = 3;
    string status = 4;
    string applied_date = 5;
}

message ApplyAdmissionRequest {
    string student_name = 1;
    string course = 2;
    string applied_date = 3;
}

message GetAdmissionRequest {
    int32 id = 1;
}

message AdmissionResponse {
    Admission admission = 1;
}

message ListAdmissionsRequest {}

message ListAdmissionsResponse {
    repeated Admission admissions = 1;
}
